# EazyAIDraw

./: README.md
backend/: Cargo.toml  generate-entity.sh
backend/src/: errors.rs  glob.rs  main.rs
backend/src/backapis/: backend.rs  mod.rs  novelai.rs  request_executor.rs  scheduler.rs
backend/src/backapis/structures/: mod.rs  novelai.rs  stablediffusion.rs
backend/src/entities/: mod.rs
backend/src/entities/auth/: account.rs  mod.rs  prelude.rs
backend/src/entities/public_data/: generate_stream.rs  mod.rs  prelude.rs  tags.rs
backend/src/entities/user_data/: mod.rs
backend/src/session/: handler.rs  mod.rs  websocket.rs
backend/src/session/packets/: draw_call.rs  draw_result.rs  mod.rs
webui/: index.html  package-lock.json  package.json  tailwind.config.cjs
webui/src/: App.svelte  app.css  app.scss  main.ts
webui/src/lib/components/: Configuration.svelte  Genbutton.svelte  Img2img.svelte  Main.svelte  Notification.svelte  Sidebar.svelte  Tagedit.svelte  Taginput.svelte  Tags.svelte  Text2img.svelte
webui/src/lib/scripts/: i18n.ts  main.ts  message.ts  novelai.ts  state.ts  statefulSwap.ts  tagEdit.ts  tools.ts
