[package]
edition = "2021"
name = "ai-draw-backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
color-eyre = "0.6"
serde = "1"
serde_json = "1"
uuid = { version = "0.8", features = ["v4"] }
dashmap = "5"
sqlx = {version = "0.5", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "chrono",
  "tls",
]}
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
sea-orm = { version = "^0.9.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
tokio = { version = "1", features = ["full"]}
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"]}
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv_codegen = "0.15"
crossbeam = "0.8.2"
pollster = "0.2.5"
reqwest = { version = "0.11.12", features = ["json"] }
poem =  {version ="1.3.46", features = ["static-files"]}
miniz_oxide = "0.5.1"
base64 = "0.13.1"
